// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobsToolbar /> should render when [canRemove=false] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[MockFunction]}
    placeholder="User or workflow"
    value="foo"
  />
</Toolbar>
`;

exports[`<JobsToolbar /> should render when [canRemove=true] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[MockFunction]}
    placeholder="User or workflow"
    value="foo"
  />
  <Button
    color="grey"
    disabled={false}
    onClick={[Function]}
    tip="Clear Finished"
    tipPlacement="top"
    type="button"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="trash"
    />
  </Button>
</Toolbar>
`;
